# aivn_sensorpack_nearby_ais

./: README.md  package.xml  setup.cfg  setup.py
aivn_sensorpack_nearby_ais/: __init__.py  ais_nmea_parser.py  ais_sixbit.py  ecs_parser.py  nearby_ais_node.py  test.file.txt
aivn_sensorpack_nearby_ais/test_code/: ais_sample.txt  ecs_sample.txt  테스트방법
config/: nearby_ais.yaml
launch/: nearby_ais.launch.py
resource/: aivn_sensorpack_nearby_ais
